stimfit (0.10.18-2) unstable; urgency=low

  [ Jonathan Wiltshire ]
  * Use dh_python2 to set proper dependencies for
    python-stfio (Closes: #631983)

  [ Yaroslav Halchenko ]
  * Ajudsted dh_python2 patch to
    - invoke it only whenever it is present
    - do not carry hardcoded python version in X-Python-Version

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 04 Mar 2012 17:03:34 -0500

stimfit (0.10.18-1) unstable; urgency=low

  * Updated copyright notice for numpy.i

 -- Christoph Schmidt-Hieber <christsc@gmx.de>  Sat, 10 Sep 2011 15:46:33 +0000

stimfit (0.10.17-1oneiric1) oneiric; urgency=low

  * Do not redirect Python stdio to separate Window (Closes: #639672)
  * From previous unreleased version: provide gtest source files (Closes: #631825)

 -- Christoph Schmidt-Hieber <christsc@gmx.de>  Tue, 30 Aug 2011 23:02:16 +0000

stimfit (0.10.17-1natty1) natty; urgency=low

  * Do not redirect Python stdio to separate Window (Closes: #639672)
  * From previous unreleased version: provide gtest source files (Closes: #631825)

 -- Christoph Schmidt-Hieber <christsc@gmx.de>  Tue, 30 Aug 2011 22:55:12 +0000

stimfit (0.10.17-1maverick1) maverick; urgency=low

  * Do not redirect Python stdio to separate Window (Closes: #639672)
  * From previous unreleased version: provide gtest source files (Closes: #631825)

 -- Christoph Schmidt-Hieber <christsc@gmx.de>  Tue, 30 Aug 2011 22:53:32 +0000

stimfit (0.10.17-1lucid2) lucid; urgency=low

  * Added source package

 -- Christoph Schmidt-Hieber <christsc@gmx.de>  Tue, 30 Aug 2011 22:47:50 +0000

stimfit (0.10.17-1lucid1) lucid; urgency=low

  * Do not redirect Python stdio to separate Window (Closes: #639672)
  * From previous unreleased version: provide gtest source files (Closes: #631825)

 -- Christoph Schmidt-Hieber <christsc@gmx.de>  Tue, 30 Aug 2011 22:38:59 +0000

stimfit (0.10.17-1) UNRELEASED; urgency=low

  * Do not redirect Python stdio to separate Window (Closes: #639672)